--- a/Exam2/Cabascango/Code/storeProducts/FrontEnd/modules/serviceModule/ListService.html
+++ b/Exam2/Cabascango/Code/storeProducts/FrontEnd/modules/serviceModule/ListService.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../../js/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="./validate.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Service</title>
 </head>
 
@@ -27,11 +28,10 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="#">Services</a>
-                <a class="nav-item nav-link "
-                    href="../operatorModule/OperatorRegister.html">Operator</a>
+                <a class="nav-item nav-link " href="../operatorModule/OperatorRegister.html">Operator</a>
                 <a class="nav-item nav-link" href="../companyVehicleModule/registerVehicle.html">Comp.
                     Vehicle</a>
-                    <a class="nav-item nav-link" href="../clientModule/ListClients.html">Clients</a>
+                <a class="nav-item nav-link" href="../clientModule/ListClients.html">Clients</a>
             </div>
         </div>
     </nav>
@@ -52,19 +52,40 @@
                     </tr>
                 </thead>
                 <tbody id="tableProduct">
-                    
-                    
+
+
                 </tbody>
             </table>
         </div>
 
     </div>
+    <form class="col-12" id="location-form" th:action="@{/elevations}" method="get">
+        <div class="form-group" id="lat-group">
+            <label for="lat">Id:</label>
+            <input type="text" class="form-control" placeholder="10" name="lat" id="id" />
+        </div>
+        <div class="form-group" id="lat-group">
+            <label for="lat">Name:</label>
+            <input type="text" class="form-control" placeholder="cikso" name="lat" id="name" />
+        </div>
+        <div class="form-group" id="lat-group">
+            <label for="lat">Type:</label>
+            <input type="text" class="form-control" placeholder="tool" name="lat" id="type" />
+        </div>
+        <div class="form-group" id="lat-group">
+            <label for="lat">Quantity:</label>
+            <input type="text" class="form-control" placeholder="6" name="lat" id="quantity" />
+        </div>
+        <button type="submit" class="btn btn-success btn-lg" id="Registrar">
+            Registrar
+        </button>
+    </form>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
             <li class="page-item disabled">
                 <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
             </li>
-            <li class="page-item"><a class="page-link" href="/FrontEnd/modules/serviceModule/Service.html">Add</a></li>
+            <li class="page-item"><a class="page-link" href="./FrontEnd/modules/serviceModule/Service.html">Add</a></li>
             <li class="page-item"><a class="page-link" href="#">List</a></li>
             <li class="page-item">
                 <a class="page-link" href="#">Next</a>
@@ -78,7 +99,38 @@
             </p>
         </div>
     </footer>
+    <script>
+        var locationForm = document.getElementById('location-form');
 
+        // Listen for submiot
+        locationForm.addEventListener('submit', geocode);
+
+
+        function geocode(e) {
+            // Prevent actual submit
+            e.preventDefault();
+
+            var id = document.getElementById('id').value;
+            var name = document.getElementById('name').value;
+            var type = document.getElementById('type').value;
+            var quantity = document.getElementById('quantity').value;
+            console.log(id);
+            console.log(name);
+            console.log(type);
+            console.log(quantity);
+            axios.get('http://localhost:8080/storeProducts/Products/' + id + '/' + name + '/'+type+'/'+quantity)
+                    .then(function (response) {
+                        // Log full response
+                        console.log(response);
+                        // Formatted Address                
+                        alert("dato Registrado");
+
+                    })
+                    .catch(function (error) {
+                        console.log(error);
+                    });
+        }
+    </script>
 </body>
 
 </html>
